Add support for GoogleAuthCookieDomain GoogleAuthCookiePath GoogleAuthCookieSecure configuration

--- a/googleauth.conf
+++ b/googleauth.conf
@@ -13,6 +13,18 @@ Loadmodule authn_google_module modules/mod_authn_google.so
 # are to last. Not specifying this disables authentication cookies, meaning
 # "sessions" will only last about a minute before needed re-authentication.
 #
+# GoogleAuthCookieDomain specifies domain name under witch the cookie is valid.
+# It will use current url host if unspecified, which in turn may cause problems
+# if protected website redirects to upper or sibling host/domain.
+#
+# GoogleAuthCookiePath specifies url path under witch the cookie is valid.
+# It will use current url path if unspecified, which in turn may cause problems
+# if protected website redirects to upper or sibling directories.
+#
+# GoogleAuthCookieSecure specifies that this cookie should be sent
+# only via https connection. Note that most browsers will not accept such
+# cookie unless it's set via https as well.
+#
 # EntryWindow specifies the "leeway" in how exact the time has to be for a
 # proper authentication to occur. "0" would mean it must be exact. "1" 
 # would mean it will except one entry newer or older. (About +/- 30 seconds)
